--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --require ts-node/register src/test/*.ts"
   },
   "keywords": [],
   "author": "",
