--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,21 +12,49 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Node.js
+    - 
+      uses: actions/checkout@v2
+    - 
+      name: Install Node.js
       uses: actions/setup-node@v1
       with:
         node-version: '14.16.1'
-    - name: Install npm dependencies
+    - 
+      name: Install npm dependencies
       run: npm install
-    - name: Install Mocha
+    - 
+      name: Install Mocha
       run: npm install -g mocha
-    - name: Install ts-node
+    - 
+      name: Install ts-node
       run: npm install -g ts-node
-    - name: Run Test
+    - 
+      name: Run Test
       run: mocha --require ts-node/register src/test/*.ts 
-    # build image
-    # push image
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    -
+      name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # build and push image
+    - 
+      name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: duaifzn/demo:1.0
+    -
+      name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
+      
     # ssh argocd
     
 
