--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node dist/app.js",
     "test": "mocha --require ts-node/register src/test/*.ts"
   },
   "keywords": [],
@@ -18,7 +19,9 @@
     "typescript": "^4.3.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^15.12.2",
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "express": "^4.17.1"
   }
 }
